<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calorie Clock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="male_string">Male</string>
    <string name="female_string">Female</string>
    <string name="calories_per_lb">Calories Per Pound</string>
    <string name="profile_editor">Calorie Clock Profile Editor</string>
    <string name="save_string">Save</string>
    <string name="cancel_string">Cancel</string>
    <string name="gender_string">Gender</string>
    <string name="current_time">Current Time</string>
    <string name="bmr_string">BMR</string>
    <string name="calories_available">Calories\nAvailable</string>
    <string name="based_on">Based On</string>
    <string name="timeline_imageview">Timeline Image View</string>
    <string name="current_weight">Current</string>
    <string name="weigh_in">Weigh In</string>
    <string name="estimated_weight">Approx.</string>
    <string name="since_meal">Since Meal</string>
    <string name="calories_eaten">Calories\nEaten</string>
    <string name="list_string">List</string>
    <string name="calories_remaining">Calories\nRemaining</string>
    <string name="lbs_string">lbs</string>
    <string name="calories">Calories</string>
    <string name="entry_time">Entry Time</string>
    <string name="note_string">Note</string>
    <string name="bank_string">Bank</string>
    <string name="note_hint">Enter notes such as food choices, or thoughts here.</string>
    
    <string name="birthday">Birthday (For Age)</string>
    <string name="activity_level">Activity\nLevel</string>
    <string name="eat">Eat</string>
    <string name="starting_weight">Starting Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="weight_in_pounds">Enter lbs</string>
    <string name="height">Height</string>
    <string name="in_feet">In feet</string>
    <string name="in_inches">In inches</string>
    
</resources>
