<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".MainActivity" >
        
    <ScrollView 
        	android:id="@+id/profileEditorScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
             
		<LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">            
	            
		    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal">
			
			    <TextView
			        android:id="@+id/textView1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:padding="5dp"
			        android:text="@string/gender_string"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
		        
			    <RadioGroup
			        android:id="@+id/radioGroup1"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="5dp"
			        android:orientation="horizontal" >
			        	
			        <RadioButton
			            android:id="@+id/optMale"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			        	android:layout_weight="1"
			            android:checked="true"
			            android:text="@string/male_string">
			        	<requestFocus />			        
			        </RadioButton>
			
			        <RadioButton
			            android:id="@+id/optFemale"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			        	android:layout_weight="1"
			            android:text="@string/female_string" />
			        
				</RadioGroup>
			    
			</LinearLayout>
			    	
		    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical">
			    
			    <TextView
			        android:id="@+id/textView2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="5dp"
			        android:paddingLeft="10dp"
			        android:text="@string/birthday"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		        <com.calorieclock.NXDatePicker
		            android:id="@+id/birthdayDatePicker"
		            android:calendarViewShown="false"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		        
		   	</LinearLayout>
			
			<LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal">        
		            
			    <TextView
			        android:id="@+id/defaultActivityLevelTextView"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:padding="5dp"
			        android:text="@string/activity_level"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
		
			    <Spinner
			        android:id="@+id/activityLevelSpinner"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
	        		android:layout_margin="10dp" />
			    
		    </LinearLayout>
		    
		    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal">        
		            
			    <TextView
			        android:id="@+id/heightTextView"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:padding="5dp"
			        android:text="@string/height"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			
			    <EditText
			        android:id="@+id/inFeetEditText"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.5"
			        android:ems="10"
			        android:gravity="center"
			        android:hint="@string/in_feet"
			        android:inputType="number"
			        android:padding="5dp"
	        		android:imeOptions="actionNext"/>
			
			    <EditText
			        android:id="@+id/inInchesEditText"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.5"
			        android:ems="10"
			        android:gravity="center"
			        android:hint="@string/in_inches"
			        android:inputType="number"
			        android:padding="5dp" />
			    
		    </LinearLayout>
			    	
		    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:paddingTop="10dp"
		            android:orientation="horizontal">
			    
			    <TextView
			        android:id="@+id/startingWeightTextView"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:padding="5dp"
			        android:text="@string/starting_weight"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			
			    <EditText
			        android:id="@+id/startingWeightEditText"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:ems="10"
			        android:gravity="center"
			        android:hint="@string/weight_in_pounds"
			        android:inputType="number"
			        android:padding="5dp" />
			    
			</LinearLayout>
			    	
		    <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:paddingTop="10dp"
		            android:orientation="horizontal">
			    
			    <TextView
			        android:id="@+id/goalWeightTextView"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:padding="5dp"
			        android:text="@string/goal_weight"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			
			    <EditText
			        android:id="@+id/goalWeightEditText"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:ems="10"
			        android:gravity="center"
			        android:hint="@string/weight_in_pounds"
			        android:inputType="number"
			        android:padding="5dp" />
			    
			</LinearLayout>		
			
		</LinearLayout>
		
	</ScrollView>
		
	<TableRow android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="45dp">
    
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
            android:layout_weight="1"
	        android:text="@string/cancel_string" 
	        android:background="@drawable/red_button" />
	
	    <Button
	        android:id="@+id/saveButton"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
            android:layout_weight="1"
	        android:background="@drawable/green_button"
	        android:text="@string/save_string" />
	    
    </TableRow>

</LinearLayout>