<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ededed"
    android:padding="5dp"
    tools:context=".MainActivity" >

    <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
		    <TextView
		        android:id="@+id/caloriesAvailableTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:layout_gravity="center_vertical"
		        android:text="@string/calories_available"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/caloriesAvailableEditText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.53"
		        android:layout_margin="5dp"
		        android:textSize="30sp"
		        android:clickable="false"
		        android:focusable="false"
		        android:ems="10"
		        android:padding="5dp"
		        android:gravity="center"
		        android:layout_gravity="center_vertical"
		        android:inputType="time"/>
		
		    <Button
		        android:id="@+id/eatButton"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="0.15"
		        android:layout_margin="5dp"
		        android:layout_gravity="center_vertical"
		        android:background="@drawable/green_button"
		        android:text="@string/eat" />
		    
	    </LinearLayout>
	    
	    <ImageView 
	        android:id="@+id/timelineImageView"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_margin="5dp"
	        android:background="#000"
	        android:contentDescription="@string/timeline_imageview"/>
	    
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">        
	            
		    <TextView
		        android:id="@+id/basedOnTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dp"
		        android:layout_gravity="center_vertical"
		        android:text="@string/based_on"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		    <Spinner
		        android:id="@+id/targetWeightSpinner"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		    
	    </LinearLayout>
	
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">        
	            
		    <TextView
		        android:id="@+id/activityLevelTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/activity_level"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		    <Spinner
		        android:id="@+id/activityLevelSpinner"
		        android:layout_width="match_parent"		        
		        android:layout_height="wrap_content" />
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
		    <TextView
		        android:id="@+id/currentWeightTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/current_weight"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/currentWeightEditText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.4"
		        android:focusable="false"
		        android:textSize="15sp"
		        android:layout_margin="10dp"
		        android:gravity="center"
		        android:inputType="number"/>
		    
		    <TextView
		        android:id="@+id/currentLbsTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/lbs_string"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <Button
		        android:id="@+id/weighInButton"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="0.4"
		        android:layout_margin="5dp"
		        android:layout_gravity="center_vertical"
		        android:background="@drawable/green_button"
		        android:text="@string/weigh_in" />
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
		    <TextView
		        android:id="@+id/estimatedWeightTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/estimated_weight"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/estimatedWeightEditText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.7"
		        android:focusable="false"
		        android:textSize="25sp"
		        android:layout_margin="10dp"
		        android:gravity="center"
		        android:inputType="number"/>
		    
		    <TextView
		        android:id="@+id/estimatedLbsTextView"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_weight="0.2"
		        android:padding="5dp"
		        android:text="@string/lbs_string"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
		    <TextView
		        android:id="@+id/sinceMealTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/since_meal"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/sinceMealEditText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.8"
		        android:focusable="false"
		        android:textSize="15sp"
		        android:layout_margin="10dp"
		        android:gravity="center"
		        android:inputType="number"/>
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
		    <TextView
		        android:id="@+id/caloriesEatenTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/calories_eaten"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/caloriesEatenEditText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.53"
		        android:layout_margin="5dp"
		        android:textSize="25sp"
		        android:clickable="false"
		        android:focusable="false"
		        android:ems="10"
		        android:padding="5dp"
		        android:gravity="center"
		        android:layout_gravity="center_vertical"
		        android:inputType="number"/>
		
		    <Button
		        android:id="@+id/caloriesEatenListButton"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="0.15"
		        android:layout_margin="5dp"
		        android:layout_gravity="center_vertical"
		        android:background="@drawable/red_button"
		        android:text="@string/list_string" />
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
		    <TextView
		        android:id="@+id/caloriesRemainingTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/calories_remaining"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/caloriesRemainingEditText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.8"
		        android:focusable="false"
		        android:textSize="25sp"
		        android:layout_margin="10dp"
		        android:gravity="center"
		        android:inputType="number"/>
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
		    <TextView
		        android:id="@+id/bmrTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/bmr_string"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/bmrEditText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textSize="25sp"
		        android:focusable="false"
		        android:layout_margin="10dp"
		        android:gravity="center"
		        android:inputType="time"/>
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
		    <TextView
		        android:id="@+id/bankTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:padding="5dp"
		        android:text="@string/bank_string"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/bankEditText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textSize="25sp"
		        android:focusable="false"
		        android:layout_margin="10dp"
		        android:gravity="center"
		        android:inputType="time"/>
		    
	    </LinearLayout>
	    
	</LinearLayout>

</ScrollView>
